--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    rss_values = list(map(lambda m_values: ))"
+    "    rss_values = list(map(lambda m_values: residual_sum_square))"
    ]
   },
   {
