--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    rss_values = list(map(lambda m_values: residual_sum_squares(x_values, y_values, m_values, b), m_value))\n",
-    "    return{'m_value': m_value}"
+    "    return{'m_value': m_values, rss_values}"
    ]
   },
   {
