--- a/index.ipynb
+++ b/index.ipynb
@@ -200,13 +200,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    rss_values = list(map(lambda m_values: residual_sum_squares(x_values, y_values, m_values, b), m_value))\n",
-    "    return{'m_value': m_values, 'rss_values'}: rss_values"
+    "    return{'m_value': m_values, 'rss_values': rss_values}"
    ]
   },
   {
