--- a/index.ipynb
+++ b/index.ipynb
@@ -200,12 +200,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    rss_values = list(map(lambda m_values: residual_sum_squares(x_values, y_values, m_values, b), m_value))\n",
+    "    rss_values = list(map(lambda m_value: residual_sum_squares(x_values, y_values, m_values, b), m_value))\n",
     "    return {'m_value': m_values, 'rss_values': rss_values}"
    ]
   },
