--- a/index.ipynb
+++ b/index.ipynb
@@ -622,7 +622,7 @@
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    chang"
+    "    change_to_m = "
    ]
   },
   {
