--- a/index.ipynb
+++ b/index.ipynb
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
     "    change_to_m = -1 * learning_rate * cost_curve_slope\n",
-    "    return change_to_m"
+    "    return change_to_m + m"
    ]
   },
   {
