--- a/index.ipynb
+++ b/index.ipynb
@@ -679,7 +679,8 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
-    "    cost_curve = []"
+    "    cost_curve = []\n",
+    "    "
    ]
   },
   {
