--- a/index.ipynb
+++ b/index.ipynb
@@ -680,7 +680,7 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    cost_curve = []\n",
-    "    "
+    "    for i in range"
    ]
   },
   {
