--- a/index.ipynb
+++ b/index.ipynb
@@ -680,7 +680,8 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    cost_curve = []\n",
-    "    for i in range"
+    "    for i in range(steps):\n",
+    "        "
    ]
   },
   {
